--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-web": "~0.11.7",
-    "expo-linear-gradient": "~8.0.0"
+    "expo-linear-gradient": "~8.0.0",
+    "expo-font": "~8.0.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
