save before expo eject

--- a/app.json
+++ b/app.json
@@ -1,14 +1,10 @@
 {
   "expo": {
-    "name": "Olango FrontEnd",
+    "name": "Olango",
     "slug": "Olango",
     "privacy": "public",
     "sdkVersion": "36.0.0",
-    "platforms": [
-      "ios",
-      "android",
-      "web"
-    ],
+    "platforms": ["ios", "android", "web"],
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -20,11 +16,15 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
-      "supportsTablet": true
+      "bundleIdentifier": "com.nzenweoforgroup.olango",
+      "supportsTablet": true,
+      "buildNumber": "1.0.0"
+    },
+    "android": {
+      "package": "com.nzenweoforgroup.olango",
+      "versionCode": 1
     },
     "description": ""
   }
