--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@react-navigation/stack": "^5.1.1",
     "accordion-collapse-react-native": "^0.2.8",
     "expo": "~36.0.0",
+    "expo-av": "~8.0.0",
     "expo-font": "~8.0.0",
     "expo-linear-gradient": "~8.0.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-audio-recorder-player": "^2.5.0",
     "react-native-collapsible": "^1.5.1",
     "react-native-gesture-handler": "~1.5.0",
     "react-native-reanimated": "~1.4.0",
