--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-sound": "^0.11.0",
+    "react-native-twilio-programmable-voice": "^3.21.3",
     "react-native-unimodules": "~0.7.0",
     "react-native-web": "~0.11.7"
   },
