--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -5,7 +5,4 @@ project(':react-native-splash-screen').projectDir = new File(rootProject.project
 apply from: '../node_modules/react-native-unimodules/gradle.groovy'
 includeUnimodulesProjects()
 
-apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle");
-applyNativeModulesSettingsGradle(settings)
-
-include ':app'
+apply from: file("../node_modules/@react-native-communitq
